--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -18,24 +18,24 @@
 <hr>
 <h2>Term Paper Topics from Spring 2024</h2>
 <ul>
-  <li>History of the calculus of variations</li>                    <!--tommie settlemyre-->
-  <li>Interactive virtual timeline on the history of &pi;</li>      <!--Rachel Carlson-->
-  <li>Cryptography in WWII</li>                                     <!--Taylor Schofield-->
-  <li>Mathematics behind M.C. Escher's artwork</li>                 <!-- Jorge Canada -->
-  <li>The Riemann Hypothesis</li>                                   <!-- Niaz Azeez -->
-  <li>Human Computers</li>                                          <!-- Simeon Nakielny -->
-  <li>History of Linear Algebra</li>                                <!-- Hunter Shepard   Outline -->
-  <li>Mathematics and Airplanes</li>                                <!-- Nikole Vernamonti -->
-  <li>Mathematics of War</li>                                       <!-- Maxwell Cao -->
-  <li>The Development of the Calculus by Newton and Leibniz</li>    <!--Chris Roosa  -->
-  <li>The Four Color Theorem</li>                                   <!-- Anthony Gath -->
-  <li>Mathematical Paradoxes of Infiinity</li>                      <!-- Nicola Gonsalves -->
-  <li>History of Mathematical notation</li>                         <!-- Brad Check-->
-  <li>permutation groups in the development of abstract algebra</li><!--  Isaiah Galo -->
-  <li>Non-Euclidean geometry</li>                                   <!-- Jacob Selensky -->
-  <li>Matematics and the Lottery</li>                               <!-- Nicholas Towers Outline -->
-  <li>The Foundational Crisis of Mathematics</li>                   <!-- Adam Attoun -->
-  <li>Unraveling Topology: Exploring Origins and the Polyhedra"</li><!-- Michelle McMahon -->
+  <li>History of the calculus of variations</li>                     <!-- Tommie settlemyre-->
+  <li>Interactive virtual timeline on the history of &pi;</li>       <!-- Rachel Carlson-->
+  <li>Cryptography in WWII</li>                                      <!-- Taylor Schofield-->
+  <li>Mathematics behind M.C. Escher's artwork</li>                  <!-- Jorge Canada -->
+  <li>The Riemann Hypothesis</li>                                    <!-- Niaz Azeez -->
+  <li>Human Computers</li>                                           <!-- Simeon Nakielny -->
+  <li>History of Linear Algebra</li>                                 <!-- Hunter Shepard   Outline -->
+  <li>Mathematics and Airplanes</li>                                 <!-- Nikole Vernamonti -->
+  <li>Mathematics of War</li>                                        <!-- Maxwell Cao -->
+  <li>The Development of the Calculus by Newton and Leibniz</li>     <!-- Chris Roosa  -->
+  <li>The Four Color Theorem</li>                                    <!-- Anthony Gath -->
+  <li>Mathematical Paradoxes of Infiinity</li>                       <!-- Nicola Gonsalves -->
+  <li>History of Mathematical notation</li>                          <!-- Brad Check-->
+  <li>permutation groups in the development of abstract algebra</li> <!-- Isaiah Galo -->
+  <li>Non-Euclidean geometry</li>                                    <!-- Jacob Selensky -->
+  <li>Mathematics and the Lottery</li>                               <!-- Nicholas Towers Outline -->
+  <li>The Foundational Crisis of Mathematics</li>                    <!-- Adam Attoun -->
+  <li>Unraveling Topology: Exploring Origins and the Polyhedra</li>  <!-- Michelle McMahon -->
 <!--  <li></li>-->
 <!--  <li></li>-->
 <!--  <li></li>-->
