--- a/teaching/24.1/weeks/W06.html
+++ b/teaching/24.1/weeks/W06.html
@@ -47,7 +47,7 @@
   It takes a very long time for these two threads of geometry to come together (a key component is the introduction of homogeneous
   coordinates, which are not coordinates in the usual sense).
   By the end of the 19th century, they do in the field of
-  algebraic geometry, which undergoes significant development in the 20th century (and is one of my research specialities),
+  algebraic geometry, which undergoes significant development in the 20th century (and is one of my research specialties),
   but we are getting ahead of ourselves.<br> 
 
   &nbsp; &nbsp;
@@ -103,7 +103,7 @@ pageTracker._trackPageview();
 } catch(err) {}</script>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Fri Feb 21 19:51:52 CST 2020--> <!-- hhmts end -->
-<p>Last modified: Sat Feb 17 16:55:02 CST 2024 by sottile</p>
+<p>Last modified: Wed Feb 28 04:06:16 PST 2024 by sottile</p>
 
 </body> </html>
 
