--- a/teaching/24.1/weeks/W07.html
+++ b/teaching/24.1/weeks/W07.html
@@ -10,7 +10,7 @@
 <!--------------------------------------------------------->
 <HR>
 <!--------------------------------------------------------->
-    <a href="http://piazza.com/tamu/spring2022/math629/home">Piazza Class page</a>.
+    <a href="http://piazza.com/tamu/spring2024/math629/home">Piazza Class page</a>.
 <!-------------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
@@ -20,7 +20,7 @@
   <li><font color=maroon><B>Opening Remarks:</b></font>
   
     &nbsp; &nbsp; Do think about your
-    <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Matematics paper</a>.
+    <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>.
     Actually, do more than merely think this through, but start your planning, as the deadline will creep up on you.
   <br>
 
@@ -29,7 +29,7 @@
   formulas involving infinite processes, including infinite sums and infinite products.
   Hopefully, you all recall how to derive the formula for the sum of a geometric series (both finite and infinite)&ndash;it
   is good to recall that before reading much of the chapter.  (You can ask for help on Piazza.)
-  The top of page 186 (my version, but in Section 10.2 on power series), where Stilllwell talks about the definitions of
+  The top of page 186 (my version, but in Section 10.2 on power series), where Stillwell talks about the definitions of
   logarithm, arcsin, and arctan in terms of integrals, is important.
   Once logarithm and the other functions are defined, one may consider their inverse functions, the exponential, sine (and
   cosine) and tangent.
@@ -37,9 +37,9 @@
   <i>e<sup>a+b</sup></i> =   <i>e<sup>a</sup></i><i>e<sup>b</sup></i>, and the angle addition formulas for sine and cosine
   and tangent.<br>
 
-  Section 10.4 contains examples where audaciously false (or unsubstantiated/unsubstantiatable) resoning leads to correctr
+  Section 10.4 contains examples where audaciously false (or unsubstantiated/unsubstantiatable) reasoning leads to correct
   results.
-  The Numberphile video below (and execrise 6 on the homework) explores a modern version of that with a twist.<br>
+  The Numberphile video below (and Exercise 6 on the homework) explores a modern version of that with a twist.<br>
 
   Notice the role of partial fractions in the formula for Fibonacci numbers, which is a bit different from how generating
   functions for recursive sequences are often used to get formulas (this is a common topic in combinatorics classes, which
@@ -57,7 +57,7 @@
 
     <li>Chapter 10  in Stillwell's book.</li>
 
-<!--     <li>Chapters six and seven in Bells's "Men of Mathematics" on Newton and Leibnitz.   Some of this is entertaining.</li>-->
+<!--     <li>Chapters six and seven in Bells's "Men of Mathematics" on Newton and Leibniz.   Some of this is entertaining.</li>-->
 
     <li>J. V. Grabiner, <a href="../pdfs/Grabiner.pdf">"The Changing Concept of Change: The Derivative from Fermat to
 	Weierstrass"<a>, 
@@ -100,7 +100,7 @@
     <br>
     
   I will have a shorter assignments the next two weeks as several people
-  are travelling in March, (Spring Breaks).
+  are traveling in March, (Spring Breaks).
   <br>
    <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope for homework submission</font>.
   <ol>
@@ -134,7 +134,7 @@
 <!---------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Mon Feb 17 09:21:04 CET 2020 --><!-- hhmts end -->
- <p>Last modified: Sun Feb 18 06:53:06 CST 2024 by sottile</p>
+ <p>Last modified: Wed Feb 28 04:05:39 PST 2024 by sottile</p>
  
 </body> </html>
 
