--- a/teaching/24.1/weeks/W08.html
+++ b/teaching/24.1/weeks/W08.html
@@ -18,27 +18,25 @@
 <font color=maroon><h3>Week 8: 5 March 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font>
-<!--  My travels the last couple of weeks kept me from completing marking your book reviews.
-  I will finish that this week, and email you scans of your papers, as well as a summary of your homework scores.
-  <br> -->
-   &nbsp; &nbsp; Do get started on your <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Matematics paper</a>.
+   &nbsp; &nbsp; Do get started on your <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>.
   <br>
   You will note that the rolling break due to spring breaks continues; the exercises should be a little lighter again this week.
   <br>
 
-  &nbsp; &nbsp;   The theme this week is the the beginning of modern algebra and the start of advanced number theory/function theory.
+  &nbsp; &nbsp;   The theme this week is the the beginning of modern algebra and the start of advanced number theory.
   It starts with the revival of elementary number theory, particularly in the work of Fermat.
   There is a decent discussion of his little and last Theorems.
-  Both of these are elementabery, and his 'little theorem' underlies one of the great technological advances in the 20th century&mdash;the
-  development of public-key cryptology.
+  Both of these are elementary, and his 'little theorem' underlies one of the great technological advances in the 20th century&mdash;the
+  development of public-key cryptography.
   The last Section 11.6 introduces us to a completely new phenomenon&mdash;curves in the plane that <i>cannot</i> be parametrized by
   rational functions.
-  This leads to the problem of how you represent them explicitly (as the set of zeroes of some equation is an <i>implicit</i> representation.
+  This leads to the problem of how you represent them explicitly (as the set of zeroes of some equation is
+  an <i>implicit</i> representation. 
   It turns out that curves defined by cubics and by quartics of the form <i>y</i><sup>2</sup>=<i>f</i>(<i>x</i>),
   where <i>f</i> has degree 4, admit a
-  geometric method to construct points on the curve that turns the curve into an abelian group, but that is a later topic.
+  geometric method to construct points on the curve that turns the curve into an abelian group, but that is a later topic.<br>
 
-  <br>
+
   We next read the story of the start of more advanced number theory in the theory of elliptic integrals and
   their transformations&ndash;this is for background when we discuss complex elliptic curves.
   Elliptic integrals are quite important historically; they led to some of the most intense mathematics of the 19th century.
@@ -50,12 +48,14 @@
   While terminology from that time persists, this is no longer an area of current research, although it informs much of modern mathematics,
   from algebraic geometry to the proof of Fermat's last Theorem (Wiles' Theorem) to the extraordinarily deep Langlands program that lies at
   the interface of number theory, analysis, and representation theory.<br>
-  &nbsp; &nbsp; The story of Fermat's Last Theorem was big news some 27 years ago.  When Andrew Wiles announced his proof (at a conference in
+  
+  &nbsp; &nbsp; The story of Fermat's Last Theorem was big news some 30+ years ago.  When Andrew Wiles announced his proof
+  (at a conference in 
   Cambridge) and released a manuscript, mathematicians all over the world started to study it for Wiles was a widely-known and highly
   respected mathematician&mdash;and not a crank (There is a continuous rain of papers purporting to prove famous results with elementary
   means, almost all of which have easily detected flaws; These are typically sent to famous mathematicians.  When I was a student at
-  <a href="https://www.cam.ac.uk/">Cambridge</a> there was a bulletin board in the mathematics department common room devoted to letters from mathematical cranks,
-  and I have even received several such manuscripts and letters.)
+  <a href="https://www.cam.ac.uk/">Cambridge</a> there was a bulletin board in the mathematics department common room devoted to letters
+  from mathematical cranks, and I have even received several such manuscripts and letters.)
   After Wiles' announcement, some faculty at the University of Chicago set up a study group, where we read his paper and lectured on it and
   the background material for most of a year; this fell apart when Wiles retracted his paper, having found an error that he later corrected
   with the help of Richard Taylor.
@@ -68,8 +68,9 @@
         the first public-key cryptosystems), as well as his famous Last Theorem (Section 11.3).
      </li>
      <li>Chapter 12 in Stillwell's book.  Some of the topics in this book are more advanced (e.g. the transformations of elliptic
-          integrals and how it leads to periodic functions with two independent periods), so I will make some of the exercises here optional (for
-   extra credit).
+       integrals and how it leads to periodic functions with two independent periods), so I will
+       not assign any exercises.
+       <!-- make some of the           exercises here optional (for   extra credit). -->
      </li>
     
 <!--     <li>Bell's sections on Fermat, Pascal, and Euler.   We will revisit Abel and Jacobi later in the semester.
@@ -80,7 +81,7 @@
 
   </li>
 
-  <li><font color=maroon><b>Assignment:</b></font> Due Monday, 14 March 2022. (HW 8)
+  <li><font color=maroon><b>Assignment:</b></font> Due Monday, 11 March 2024. (HW 8)
     Here is a <a href="../HW/HW08.pdf">.pdf</a> and a  <a href="../HW/HW08.tex">LaTeX source</a> of the assignment.<br>
     <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope
       for homework submission</font>.
@@ -94,12 +95,12 @@
     <li>Exercise 11.6.1, 11.6.2, and 11.6.3.  These together, with Exercise 11.4.4 prove the statement about the impossibility of a
       rational parameterization of
       <i>y</i><sup>2</sup>=1-<i>x</i><sup>4</sup>.
-      This works because the integers, like polynomials in one variable, form a Principal Ideal Domain,
-       and both have unique factorization.
+      This works because the integers, like polynomials in one variable with coefficients from a field, form a Principal Ideal Domain,
+       and such rings have unique factorization in to prime/irreducible elements.
     </li>
-    <li><font color=maroon>For extra credit:</font>  Exercises in Section 12.4 in Chapter 12.
+ <!--   <li><font color=maroon>For extra credit:</font>  Exercises in Section 12.4 in Chapter 12.
       Students have found these to be challenging.
-      <font color=maroon>These exercises, if you attempt them, are to be emailed to Frank.</font></li>
+      <font color=maroon>These exercises, if you attempt them, are to be emailed to Frank.</font></li> -->
     </li>
   </ol>
  </li>
@@ -113,7 +114,7 @@
 
 <!---------------------------------------------------------------------------------------------------->x
  <!-- hhmts start Last modified: Fri Mar  6 23:55:58 CET 2020 --><!-- hhmts end -->
-<p>Last modified: Sun Feb 18 06:54:16 CST 2024 by sottile</p>
+<p>Last modified: Wed Feb 28 04:08:13 PST 2024 by sottile</p>
 
 
 </body> </html>
