--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -25,8 +25,8 @@ Information for
   <a href="weeks/W12.html">Week 12</a>  &nbsp;     
   <a href="weeks/W11.html">Week 11</a>  &nbsp;  
   <a href="weeks/W10.html">Week 10</a>  &nbsp;
-  <a href="weeks/W09.html">Week 9</a>  &nbsp;
-  <a href="weeks/W08.html">Week 8</a>  &nbsp; -->
+  <a href="weeks/W09.html">Week 9</a>  &nbsp; -->
+  <a href="weeks/W08.html">Week 8</a>  &nbsp;
   <a href="weeks/W07.html">Week 7</a>  &nbsp; 
   <a href="weeks/W06.html">Week 6</a>  &nbsp;     
   <a href="weeks/W05.html">Week 5</a>  &nbsp;
@@ -200,13 +200,14 @@ A value of having the community of scholars that is a University is interaction 
   </tr>
   <tr>
     <td></td><td>
-      <a href="Second_paper.html"></a>Short Paper  &nbsp; Due date TBD (likely early March) <!-- <font color=**0000>Wednesday February 21</font>-->
+      <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>
+      &nbsp; Due date <font color=880000>Wednesday March 20 </font>
       &nbsp; &nbsp; &nbsp;
     </td> <td> 100 </td>
   </tr>
   <tr>
     <td></td><td>
-      <a href="Second_paper.html"></a>Group quiz  &nbsp;   <font color=**0000>May 6 &mdash; 7</font>
+      <a href="Second_paper.html"></a>Group quiz  &nbsp;   <font color=880000>May 6 &mdash; 7</font>
       &nbsp; &nbsp; &nbsp;
     </td> <td> 60 </td>
   </tr>
@@ -218,7 +219,7 @@ A value of having the community of scholars that is a University is interaction 
   </tr>
   <tr>
     <td></td><td>
-      <a href="Term_paper.html"></a>Term Paper  &nbsp;   <font color=880000>End of April</font>
+      <a href="Term_paper.html">Term Paper</a>  &nbsp;   <font color=880000>End of April</font>
       &nbsp; &nbsp; &nbsp;
     </td> <td> 200 </td>
   </tr>
