--- a/conferences/TAGS24/abstracts.html
+++ b/conferences/TAGS24/abstracts.html
@@ -85,6 +85,51 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
     </td>
   </tr>
   <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><font size=+1> Pierrick Bousseau</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2>The KSBA moduli space of log Calabi-Yau surfaces.</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+
+ The KSBA moduli space, introduced by Koll&aacute;r, Shepherd-Barron, and Alexeev, is a natural generalization of the moduli space of stable
+ curves to higher dimensions.
+ It parametrizes stable pairs (<i>X</i>,<i>B</i>), where <i>X</i> is a projective algebraic variety satisfying certain conditions
+ and <i>B</i> is a
+ divisor such that <i>K</i><sub><i>X</i></sub>+<i>B</i> is ample.
+ This moduli space is described concretely only in a handful of situations: for instance, if <i>X</i> is a toric variety and
+ <i>B</i>=<i>D</i>+\epsilon <i>C</i>,
+ where <i>D</i> is the toric boundary divisor and <i>C</i> is an ample divisor, it is shown by Alexeev that the KSBA moduli space is a toric
+ variety.
+ Generally, given a log Calabi-Yau variety (<i>X</i>,<i>D</i>) consisting of a projective variety <i>X</i> and a maximal anticanonical
+ divisor <i>D</i> and an ample divisor <i>C</i> on <i>X</i>, it was conjectured by Hacking, Keel, and Yu that the
+ KSBA moduli space of stable pairs
+ (<i>X</i>, <i>D</i>+&epsilon; <i>C</i>) is still toric (up to passing to a finite cover).
+ In joint work with Alexeev and Arguz (<tt>arXiv:2402.15117</tt>), we prove this conjecture for all log Calabi-Yau surfaces.
+ This uses tools from the minimal model program, log smooth deformation theory and mirror symmetry.
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td><font size=+1></font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2></font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+
+
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
     <td><font size=+1></font></td><td>&nbsp;</td>
