--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -84,7 +84,7 @@ Frank cancelled his attendance on 11 February 2024
 We will have some support available to cover travel expenses and accommodation for graduate students and
 early-career participants. Request this with your registration. <br>
 
-<a href="local.html"><b>Local and Practical Information</b></a>  <font color=red>(Under Construction)</font>   <br>
+<a href="local.html"><b>Local and Practical Information</b></a>  <!--<font color=red>(Under Construction)</font>-->   <br>
 <!----------------------------------------------------------------------------------------------------->
 <hr>
 <!----------------------------------------------------------------------------------------------------->
