--- a/conferences/TAGS24/local.html
+++ b/conferences/TAGS24/local.html
@@ -8,7 +8,7 @@
 <!--------------------------------------------------------------------------------------------------->
  <a href="index.html"><h2>Texas Algebraic Geometry Symposium</h2></a><br>
  Texas A&amp;M University 5  &ndash; 7 April 2024.<br>
- <font color=red>Under Construction</font><br>
+ <!--<font color=red>Under Construction</font><br>-->
  
 <h3><font color=Maroon>Local Information</font></h3>
 
