--- a/talks.html
+++ b/talks.html
@@ -119,11 +119,25 @@
 
   <!---------------------------------------------------------------------------------------->
   <li>
-     <FONT COLOR="AA00FF"><I>TBA</I></font>, <!-- quantum Murnaghan-Nakayama -->
+     <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
      Berleley Combinatorics Seminar, 17 April 2024.
- </li>
+     <a href="talks/23/qMN.txt">Abstract</a>. 
+  </li>
    <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math club, Georgia Tech, 
+      27 March 2024.   <a href="talks/23/SAGA.txt">Abstract</a>. 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
+     Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 19 March 2024.
+      <a href="talks/24/WWSigns.txt">abstract</a>
+  </li>
    <!---------------------------------------------------------------------------------------->
+    <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Invited talk, <a href="https://sites.google.com/view/golden-section-2024/home">MAA Golden Section meeting</a>, University of
@@ -136,7 +150,7 @@
     <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
     Geometry Seminar, Texas A&amp;M 19 February 2024.
       <a href="talks/24/WWSigns.txt">abstract</a>
- </li>
+  </li>
    <!---------------------------------------------------------------------------------------->
    <!---------------------------------------------------------------------------------------->
   <li>
@@ -574,7 +588,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Sun Feb 18 10:25:47 CST 2024 by sottile</p>  
+<p>Last modified: Thu Mar 07 06:46:30 PST 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
