--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -24,8 +24,8 @@ Information for
   <a href="weeks/W13.html">Week 13</a>  &nbsp;
   <a href="weeks/W12.html">Week 12</a>  &nbsp;     
   <a href="weeks/W11.html">Week 11</a>  &nbsp;  
-  <a href="weeks/W10.html">Week 10</a>  &nbsp;
-  <a href="weeks/W09.html">Week 9</a>  &nbsp; -->
+  <a href="weeks/W10.html">Week 10</a>  &nbsp; -->
+  <a href="weeks/W09.html">Week 9</a>  &nbsp;
   <a href="weeks/W08.html">Week 8</a>  &nbsp;
   <a href="weeks/W07.html">Week 7</a>  &nbsp; 
   <a href="weeks/W06.html">Week 6</a>  &nbsp;     
@@ -274,7 +274,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Sat Feb 17 16:14:32 CST 2024 by sottile</p>
+<p>Last modified: Mon Mar 11 11:17:59 PDT 2024 by sottile</p>
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
