--- a/teaching/24.1/Term_Paper_Topics.html
+++ b/teaching/24.1/Term_Paper_Topics.html
@@ -10,7 +10,11 @@
 </H1>
 <!---------------------------------------------------------------------------->
   I do not accept topics related to the Golden ratio; these have led to rather inferior papers in recent years.
-  Sorry if you like that topic.
+  Sorry if you like that topic.<br>
+
+  <b>Some topics that would be interesting to consider</b><br>
+  
+  Mathematics and History of Elliptic functions. <br>
 <!---------------------------------------------------------------------------->
 </H1>
 <!---------------------------------------------------------------------------->
