--- a/teaching/24.1/weeks/W08.html
+++ b/teaching/24.1/weeks/W08.html
@@ -2,7 +2,7 @@
 <BODY BGCOLOR="#FFFFFF"  alink="#FFFFFF">
 <A NAME="top"></A>
 <!-------------------------------------------------------------->
-  <H1><a href="629.html">Math 629:  History of Mathematics</a><br>
+  <H1><a href="../629.html">Math 629:  History of Mathematics</a><br>
   Frank Sottile
  </H1>
 <!---------------------------------------------------------------------------->
@@ -114,7 +114,7 @@
 
 <!---------------------------------------------------------------------------------------------------->
  <!-- hhmts start Last modified: Fri Mar  6 23:55:58 CET 2020 --><!-- hhmts end -->
-<p>Last modified: Wed Feb 28 04:08:13 PST 2024 by sottile</p>
+<p>Last modified: Mon Mar 11 11:17:02 PDT 2024 by sottile</p>
 
 
 </body> </html>
