--- a/conferences/TAGS24/abstracts.html
+++ b/conferences/TAGS24/abstracts.html
@@ -117,6 +117,34 @@ Alexander Betts, Sachi Hashimoto, and Pim Spelier.
   <!----------------------    The next two rows are for one entry    ----------------------------------->
   <!---------------------------------------------------------------------------------------------------->
   <tr>
+    <td><font size=+1> Hannah Larson</font></td><td>&nbsp;</td>
+    <td><font size=+1 color=Purple colspan=2> Cohomology of moduli spaces of curves</font></td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
+    <td colspan=2>  </td><td width=800 colspan=3>
+
+      The moduli space <i>M<sub>g</sub></i> of genus <i>g</i> curves (or Riemann surfaces) is a central object of study in algebraic geometry.
+      Its cohomology is important in many fields.
+      For example, the cohomology of <i>M<sub>g</sub></i> is the same as the cohomology of the mapping class group, and is also related to
+      spaces of modular forms.
+      Using its properties as a moduli space, Mumford defined a distinguished subring of the cohomology of <i>M<sub>g</sub></i> called the
+      tautological ring.
+      The definition of the tautological ring was later extended to the compactification <i>M<sub>g</sub></i>-bar and the moduli spaces with
+      marked points <i>M</i><sub><i>g</i>,<i>n</i></sub>-bar.
+      While the full cohomology ring of <i>M</i><sub><i>g</i>,<i>n</i></sub>-bar is quite mysterious, the tautological subring is relatively
+      well understood, and conjecturally completely understood.
+      In this talk, I will ask the question: which cohomology groups <i>H<sup>k</sup></i>(<i>M</i><sub><i>g</i>,<i>n</i></sub>-bar) are
+      tautological? And when they are not, how can we better understand them?
+      This is joint work with Samir Canning and Sam Payne.
+      
+    <br> <br>
+    </td>
+  </tr>
+  <!---------------------------------------------------------------------------------------------------->
+  <!----------------------    The next two rows are for one entry    ----------------------------------->
+  <!---------------------------------------------------------------------------------------------------->
+  <tr>
     <td><font size=+1></font></td><td>&nbsp;</td>
     <td><font size=+1 color=Purple colspan=2></font></td>
   </tr>
