--- a/teaching/24.1/weeks/W09.html
+++ b/teaching/24.1/weeks/W09.html
@@ -14,38 +14,40 @@
 <!-------------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
-You do need to finish your <a href="../Second_paper.html">Second Paper </a> this week.
+You do need to be working on your  <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>.
+  <br>
+  You will note that the rolling break due to spring breaks continues; the exercises should be a little lighter again this week.
+  <br>
 <!-------------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
-I will be putting up information about your term paper soon.
-Rough instructions are:
-This should be about 2500-3000 words, or a comparable project in another medium.
-The topic is your choice, but (like the book) it should involve a nontrivial amount of history and a nontrivial amount of mathematics.
-Note that contemporary topics are OK.
-If you already have ideas, or want to discuss this, feel free to write me on Piazza.
-<!-------------------------------------------------------------->
-<HR>
-<!-------------------------------------------------------------->
-<font color=maroon><h3>Week 9: 12 March 2022. </h3></font>
+<font color=maroon><h3>Week 9: 12 March 2024. </h3></font>
 <ul>
   <li><font color=maroon><B>Opening Remarks:</b></font><br>
   &nbsp; &nbsp; 
-  This week's reading is first on mechanics, which is an important influence of physics on Mathematics.
+  This week's reading is on mechanics, which is an important influence of Physics on Mathematics.
   As an algebraist, physics major, and now applied mathemetician, I appreciate these topics.
-  This is slightly out of place, as it predates and motivates the Calculus, but then it continues quite a bit past the time of calculus.
-  Stillwell probably did not want to split this into two chapter, hence the slight mismatch.
-  At any given time, mathematics is being developed along several fronts, and thus a subject-based historical survey
-  will have to jumo around in time a lot.
+  This chapter is slightly out of place, as it predates and motivates the Calculus, but then it continues quite a bit past the time of calculus.
+  Stillwell probably did not want to split this into two chapters, hence the slight mismatch.
+  At any given time, mathematics is being developed along several fronts, and thus a subject-based historical survey of mathematics (like
+  our book)   will have to jump around in time a lot.
 <br>
-  &nbsp; &nbsp; The chapter on mechanics covers a lot of history, from the late medieval period until 1900.
+  &nbsp; &nbsp; This chapter on mechanics covers a lot of history, from the late medieval period until 1900.
   This begins with relations between velocity, acceleration, and distance, and ends with
   chaotic motion and fluid mechanics.
   I suspect that the compression of topics is due to Stilwell's interests, and probably also the need to keep the book from getting too long.
-
 <br>
-&nbsp; &nbsp;  I am also assigning reading about differential geometry and curvature, but not yet assigning many homework problems from it.
-This topic naturally follows mechanics and mechanical curves.
+&nbsp; &nbsp; The historical discussions in Sections 13.1 and 13.2 should be fascinating to all of us.
+We see how Archimedes was influenced by physical thinking in his work on areas and volumes (recall our earlier discussion of his Method),
+and then how the precursors to the calculus arose in thinking about motion.
+It was particularly intersting to see how Roberval in the 17th century grasped the idea of vector addition so early.
+(Vectors came into their own only in the late 19th century).
+<br>
+&nbsp; &nbsp; Later sections describe quite a lot of high points of mechanics.
+The history of the special properties of the catenary and cycloid are fascinating, and are examples of results that could not have been
+obtained without methods developed in calculus.
+Do read in detail about the story of the Bernoulli's; they really had a family business, as well as a deep influence on the development of
+mathematics in the 18th century.
 
 <!-- 
   <br><br>
@@ -61,36 +63,32 @@ This topic naturally follows mechanics and mechanical curves.
 
     <li>
      Chapter 13 in Stillwell's book.   Pages 262&ndash;263 are a bit cumbersome, and Fulling has a succinct and easy summary
-     of <a href="../../18.1/pdfs/wave.pdf">d'Alembert's derivation of the wave equation</a>.
+     of <a href="../../images_629/wave.pdf">d'Alembert's derivation of the wave equation</a>.
     </li> 
-    <li>Watch the Vsauce videa on the <a href="https://www.youtube.com/watch?v=skvnj67YGmw">Brachistochrome</a>.
+<!--    <li>Watch the Vsauce videa on the <a href="https://www.youtube.com/watch?v=skvnj67YGmw">Brachistochrome</a>.-->
     </li> 
     <li>
       Watch the 3Blue1Brown video
       <a href="https://www.youtube.com/watch?v=Cld0p3a43fU">interviewing Steven Strogartz about the Brachistochrome</a>.
    </li> 
-   <li>
-    Chapter 17 in Stillwell's book.
-    While differential geometry is a 19th century topic, this can be read just after Chapter 13 (next week, we do the three in between).
-    </li> 
-    <li>Watch the Numberphile video about <a href="https://www.youtube.com/watch?v=gi-TBlh44gY">curvature and eating Pizza</a>.</li>
-    <li>Read the following Here is a <a href="../../18.1/pdfs/partial_derivatives.pdf">handout</a> I created for a course in
+    <li>Read the following: Here is a <a href="../../images_629/partial_derivatives.pdf">handout</a> I created for a course in
       differential equations at the University of Toronto, when the students needed a proof that mixed partials derivatives commuted.
-      It, like the differential equations course I had in 1982 at Michigan State was proof-based (the instructor gave careful proofs
-      of all results, including existence and uniqueness of solutions to ordinary differential equations.
-   </ul>
+    </li> 
+  </ul>
   </li>
 
-  <li><font color=maroon><b>Assignment:</b></font> Due Monday, <font color=red>28 March 2022</font>. (HW 9)<br>
-        Here is a <a href="../HW/HW09.pdf">.pdf</a> and a  <a href="../HW/HW09.tex">LaTeX source</a> of the assignment.<br>
+  <li><font color=maroon><b>Assignment:</b></font> Due Monday, <font color=red></font>18 March 2024. (HW 9)<br>
+    Here is a <a href="../HW/HW09.pdf">.pdf</a> and a  <a href="../HW/HW09.tex">LaTeX source</a> of the assignment.<br>
+    The group assignment is relatively light, I am asking that you verify the steps in
+    <a href="../../images_629/wave.pdf">Fulling's explanation of d'Alembert's  derivation of the wave equation</a>.
+     Here is a  <a href="../HW/Group09.pdf">pdf</a> of the group assignment (which just repeats the previous text).
+ <br>
    <b><font color=maroon>To hand in:</font></b>  <font color=red>We are using Gradescope
      for homework submission</font>.
   <ol>
-    <li>Exercises 13.5.1 and 13.5.2.</li>
-    <li>Do the steps in Fulling's explanation of <a href="../../18.1/pdfs/wave.pdf">d'Alembert's  derivation of the wave equation</a>.
-    <li>With your second paper coming due, I will not assign  problems from Chapter 17, for now.</li>
+    <li>Exercises 13.5.1 and 13.5.2 from Stillwell.</li>
 
-    <li>Do the three problems in the <a href="../../18.1/pdfs/partial_derivatives.pdf">handout</a> on Clairaut's Theorem about
+    <li>Do the three problems in the <a href="../../images_629/partial_derivatives.pdf">handout</a> on Clairaut's Theorem about
       mixed partial derivatives.
     </li>
 
@@ -104,8 +102,8 @@ This topic naturally follows mechanics and mechanical curves.
 <!-------------------------------------------------------------->
 <address></address>
 <!---------------------------------------------------------------------------->
-<!-- hhmts start -->Last modified: Sat Mar 14 12:53:30 CDT 2020 <!-- hhmts end -->
-<p>Last modified: Sun Mar 20 04:32:47 CDT 2022 by sottile</p>
+<!-- hhmts start Last modified: Sat Mar 14 12:53:30 CDT 2020  --><!-- hhmts end -->
+<p>Last modified: Mon Mar 11 13:21:44 PDT 2024 by sottile</p>
 
 </body> </html>
 
