talks and turnitin

--- a/conferences.html
+++ b/conferences.html
@@ -139,7 +139,7 @@
  <!---------------------------------------------------------------------------------------------------->
 
  <li>
-   <a href="conferences/TAGS24/index.html">Texas Algebraic Geometry Symposium</a>,
+   <a href="conferences/TAGS24/index.html">Texas Algebraic Geometry Symposium: Syzygies over Texas!</a>,
    Texas A&amp;M University,
    5  &ndash; 7 April, 2024.<br>
    Supported by NSF grant DMS-2349244.
@@ -167,7 +167,7 @@
 <address></address>
 <!-- hhmts start Last modified: Sat Mar 18 09:34:04 CET 2023 <!-- hhmts end -->
 <!---------------------------------------------------------------------------------------------------->
-<p>Last modified: Wed Feb 14 15:46:10 GMT 2024 by sottile</p>  
+<p>Last modified: Wed Mar 13 01:25:25 PDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------------------------------->
 
 </body> </html>
