--- a/conferences/TAGS24/index.html
+++ b/conferences/TAGS24/index.html
@@ -11,7 +11,7 @@
   <tr>
    <td rowspan="3" width="300"><img src="MenosBlocker.jpg" height="502"></td>
    <td width="600">
-     <h2>Texas Algebraic Geometry Symposium</h2><br>
+     <h2>Texas Algebraic Geometry Symposium: Syzygies over Texas!</h2><br>
      Texas A&amp;M University 5 April &ndash; 7 April 2024.<br><br>
    </td><td rowspan=3>&nbsp;</td>
    <td rowspan="3"><img src="NSFLogo_200.png"><br>
