--- a/talks.html
+++ b/talks.html
@@ -117,6 +117,28 @@
  <B><FONT SIZE=+1 color=brown>Upcoming Talks</FONT></B>
  <ul>
 
+ <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
+    Berkeley Math Circle Colloquium, 5 May 2024.
+    <a href="talks/21/Cubic.txt">abstract</a>
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+     <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronski Map (New conjectured reality)</I></font>,
+     AMS Special Session in in Celebration of Bruce Reznick's retirement, AMS Western Section Meeting, SAn Francisco State University,
+      4 May 2024.
+     <a href="talks/24/WWSigns.txt">Abstract</a> 
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+     <FONT COLOR="AA00FF"><I>Critical Points of Discrete Periodic Operators</I></font>,
+     Berleley Spectral Theorem Seminar, 17 April 2024.
+     <a href="talks/24/CPoDPO.txt">Abstract</a> 
+  </li>
+  <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
      <FONT COLOR="AA00FF"><I>A Murnaghan-Nakayama rule in quantum Schubert calculus</I></font>,
@@ -126,18 +148,45 @@
    <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
+    <FONT COLOR="AA00FF"><I>TBA</I></font>,
+    Colloquium, Georgia Tech, 28 March 2024.   <!--  <a href="talks/24/WWSigns.txt"></a>abstract.-->
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
     <FONT COLOR="AA00FF"><I>Some Algebraic Geometry in Applications</I></font>, Math club, Georgia Tech, 
       27 March 2024.   <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
   <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
-    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map</I></font>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map (New conjectured reality)</I></font>,
+    Algebra Seminar, Georgia Tech, 25 March 2024.     <a href="talks/24/WWSigns.txt">abstract</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+  <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>Welschinger Signs and the Wronskii map (New conjectured reality)</I></font>
      Commutative Algebra/Algebraic Geometry Seminar, University of California, Berkeley, 19 March 2024.
-      <a href="talks/24/WWSigns.txt">abstract</a>
+      <a href="talks/24/WWSigns.txt">abstract</a>.
   </li>
    <!---------------------------------------------------------------------------------------->
-    <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+</ul>
+<hr>
+<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
+<ul>
+  <!---------------------------------------------------------------------------------------->
+   <!---------------------------------------------------------------------------------------->
+  <li>
+    <FONT COLOR="AA00FF"><I>The Shape of Space</I></font>,
+    <a href="https://mathcircle.berkeley.edu/">Berkeley Math Circle Beginners II</a>,
+    University of California, Berkeley,
+    13 March 2024.
+    <a href="talks/18/Shape.txt">Abstract</a>.
+  </li>
+  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
     Invited talk, <a href="https://sites.google.com/view/golden-section-2024/home">MAA Golden Section meeting</a>, University of
@@ -174,12 +223,6 @@
    <a href="talks/24/CPoDPO.txt">abstract</a> <!--&nbsp; <a href="talks/23/MathFest.pdf">text of talk</a>.-->
   </li>
   <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
-</ul>
-<hr>
-<B><FONT SIZE=+1 color=brown>Recent Talks</FONT></B>
-<ul>
- <!---------------------------------------------------------------------------------------->
   <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Galois groups in Enumerative Geometry</I></font>,
@@ -225,7 +268,7 @@
     1 December 2023.   <a href="talks/23/SAGA.txt">Abstract</a>. 
   </li>
  <!---------------------------------------------------------------------------------------->
-  <!---------------------------------------------------------------------------------------->
+ <!---------------------------------------------------------------------------------------->
   <li>
     <FONT COLOR="AA00FF"><I>Cardano and the Cubic</I></font>
     Texas A&amp;M Math Circle&mdash;advanced,
@@ -588,7 +631,7 @@
 
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Thu Mar 07 06:46:30 PST 2024 by sottile</p>  
+<p>Last modified: Fri Mar 15 09:43:26 PDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 </body> </html>
 
