--- a/teaching/24.1/629.html
+++ b/teaching/24.1/629.html
@@ -42,14 +42,15 @@ Information for
 <!--------------------------------------------------------->
  <HR>
  Information about your <a href="Term_Paper.html">Term Paper</a>.<br>
- Information about your <a href="ReflectionsOnHistoryOfMathematics.html">reflections on the history of mathematics</a><br>
+ Information about your <a href="ReflectionsOnHistoryOfMathematics.html">reflections on the history of mathematics</a>
+    Due 20 March 2024.<br>
  <!--    Information for building your <a href="Hyperbolic_Soccerballs.html">Hyperbolic soccer ball</a>.
-    <a href="triangle.gif">View</a> your triangle data.<br>
+    <a href="triangle.gif">View</a> your triangle data.<br> -->
   You will need to both email a .pdf to me at <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT>,
   and submit it to turnitin.com.<br>
   Here is the information for our class:<br>
-  <font color=magenta>Math 629 History of Mathematics &nbsp; &nbsp;  Class ID:  33187690 &nbsp; &nbsp; Class Enrollment Key:
-    Sottile629</font><br>  -->
+  <font color=magenta>Math 629 History of Mathematics &nbsp; &nbsp;  Class ID: 43151150 &nbsp; &nbsp; Class Enrollment Key is sent to you
+    on PIazza</font><br>  
 <!--------------------------------------------------------->
 <HR>
 <!-------------------------------------------------------------->
@@ -200,7 +201,7 @@ A value of having the community of scholars that is a University is interaction 
   </tr>
   <tr>
     <td></td><td>
-      <a href="../ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>
+      <a href="ReflectionsOnHistoryOfMathematics.html">Reflections on the History of Mathematics paper</a>
       &nbsp; Due date <font color=880000>Wednesday March 20 </font>
       &nbsp; &nbsp; &nbsp;
     </td> <td> 100 </td>
@@ -274,7 +275,7 @@ I have also been greatly helped by Professor Emeritus Fulling and Professor Emer
 
 <!---------------------------------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Mon Mar 11 11:17:59 PDT 2024 by sottile</p>
+<p>Last modified: Fri Mar 15 10:21:59 PDT 2024 by sottile</p>
 <!---------------------------------------------------------------------------------------------------->
 </body> </html>
 
