--- a/teaching/24.1/ReflectionsOnHistoryOfMathematics.html
+++ b/teaching/24.1/ReflectionsOnHistoryOfMathematics.html
@@ -14,10 +14,10 @@
 <!---------------------------------------------------------------------------->
 <font color=maroon><h2>Reflections on History of Mathematics (due <font color=red>March 20</font>) </h2></font>
   You will need to both email a .pdf to me at <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT> (or through Piazza; I think
-  this works),   and submit this to turnitin.com. (directions in the future)<br>
-<!--  Here is the information for our class:<br>
-<font color=magenta>Math 629 History of Mathematics &nbsp; &nbsp; Class ID: 33187690&nbsp; &nbsp; Class Enrollment Key:
-  Sottile629</font><br> -->
+  this works),   and submit this to turnitin.com. <br>
+  Here is the information for our class:<br>
+<font color=magenta>Math 629: History of Mathematics &nbsp; &nbsp; Class ID: 43151150 &nbsp; &nbsp; Class Enrollment Key: See
+  Piazza.</font><br>  
 Please make your paper double-spaced (actually 1.3 or 1.5 will do), also 12 pt type for
   my old eyes, and a running head with your name and finally, page numbers and a title.  Thanks.
 <hr>
@@ -61,7 +61,7 @@ Please make your paper double-spaced (actually 1.3 or 1.5 will do), also 12 pt t
 <address></address>
 <!---------------------------------------------------------------------------->
 <!-- hhmts start Last modified: Sun Apr 19 09:41:25 CDT 2020--> <!-- hhmts end -->
-<p>Last modified: Sun Feb 18 12:46:58 CST 2024 by sottile</p>
+<p>Last modified: Fri Mar 15 10:24:49 PDT 2024 by sottile</p>
 <!---------------------------------------------------------------------------->
 
 </body> </html>
