--- a/teaching/24.1/Term_Paper.html
+++ b/teaching/24.1/Term_Paper.html
@@ -20,10 +20,9 @@ students have already chosen for our class.
 <font color=maroon><h2>The term paper (due end of April)</h2></font>
 
   You will need to both email a .pdf to me at <TT><a href="mailto:sottile@tamu.edu">sottile@tamu.edu</a></TT>,
-  and submit this to turnitin.com.  I will set that up later in the semeser.<br>
-<!--  Here is the information for our class:<br>
-<font color=magenta>Math 629 History of Mathematics &nbsp; &nbsp; Class ID: 33187690&nbsp; &nbsp; Class Enrollment Key:
-  Sottile629</font>-->
+  and submit this to turnitin.com.<br>
+  Here is the information for our class:<br>
+<font color=magenta>Math 629 History of Mathematics &nbsp; &nbsp; Class ID: 43151150 &nbsp; &nbsp; Class Enrollment Key: See Piazza.</font>
 
 <hr>
 This will be a fairly substantial paper.
@@ -168,7 +167,7 @@ These are included not to delineate what you will write about, but to stimulate 
 </ul>
 <hr>
 <!---------------------------------------------------------------------------->
-<p>Last modified: Tue Feb 06 08:45:33 GMT 2024 by sottile</p>  
+<p>Last modified: Fri Mar 15 10:24:57 PDT 2024 by sottile</p>  
 <!---------------------------------------------------------------------------->
 
 </body> </html>
